# sparse-autoencoder

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: train.py
src/sparse_autoencoder/: __init__.py  model.py  sparsity.py
